# fashion-garment-classifier

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
app/api/: .env.example  package.json  pyproject.toml
app/api/fashion_api/: __init__.py  config.py  main.py
app/api/fashion_api/db/: models.py  session.py
app/api/fashion_api/garment/: __init__.py  annotations.py  classifier.py  filters.py  models.py  parser.py  router.py
app/web/: index.html  package.json  tailwind.config.ts  vite.config.ts
app/web/src/: App.tsx
app/web/src/api/: client.ts
app/web/src/components/: AnnotationPanel.tsx  DetailModal.tsx  FilterSidebar.tsx  GarmentCard.tsx  GarmentGrid.tsx  SearchBar.tsx  UploadModal.tsx
app/web/src/hooks/: useAnnotations.ts  useFilters.ts  useGarments.ts
app/web/src/types/: garment.ts
docs/: EVAL_METHODOLOGY.md
eval/: analysis.md  labels.json  run_eval.py  synonym_map.json
eval/reports/: baseline_report.md
tests/e2e/: conftest.py  test_upload_classify_filter.py
tests/integration/: conftest.py  test_filters.py
tests/unit/: test_parser.py
