[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fashion-api"
version = "0.1.0"
description = "Fashion garment classification API powered by Claude vision"
requires-python = ">=3.12"

dependencies = [
    "anthropic>=0.35.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
    "structlog>=24.2.0",
    "tenacity>=9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fashion_api"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fashion_api"]
